feat(contract): implement contract service logic